--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.120.4",
-    "@react-three/fiber": "^9.0.0-alpha.8",
+    "@react-three/drei": "^9.61.3",
+    "@react-three/fiber": "^8.12.0",
     "@sentry/react-native": "^6.4.0",
     "@types/three": "^0.171.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "15.1.3",
+    "next": "^15.1.3",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,14 +28,12 @@
     "three-globe": "^2.39.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3.0.0",
+    "@types/node": "^20.6.0",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
+    "postcss": "^8.4.30",
+    "tailwindcss": "^3.4.2",
+    "typescript": "^5.2.2"
   }
 }
