--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "eslint": "^9.17.0",
     "postcss": "^8.4.30",
     "tailwindcss": "^3.4.2",
     "typescript": "^5.2.2"
