--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.61.3",
     "@react-three/fiber": "^8.12.0",
     "@sentry/react-native": "^6.4.0",
+    "@types/react-lottie": "^1.2.10",
     "@types/three": "^0.171.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
